--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.adalbertosoares.buddybox.MainActivity">
 
-    <TextView
+    <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:id="@+id/recentPlayables"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:choiceMode="singleChoice"
+        android:clickable="true" />
 </RelativeLayout>
