--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,10 +4,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.adalbertosoares.buddybox.MainActivity">
 
     <RelativeLayout
@@ -16,13 +12,104 @@
         android:id="@+id/topBar"
         android:layout_alignParentTop="true">
 
-        <!--<android.support.design.widget.BottomNavigationView
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/topNavView_Bar"
-            android:background="@drawable/white_grey_border_top"
-            app:menu="@menu/top_navigation_menu">
-        </android.support.design.widget.BottomNavigationView>-->
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:textAlignment="center">
+
+            <ImageButton
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:id="@+id/libraryNavbarBtn"
+                android:src="@drawable/ic_library_music"
+                android:contentDescription="@string/music_library"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:background="@android:color/transparent"
+                android:paddingBottom="10dp" />
+
+            <ImageButton
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:id="@+id/lovedNavbarBtn"
+                android:src="@drawable/ic_loved"
+                android:contentDescription="@string/loved"
+                android:layout_alignParentTop="true"
+                android:layout_toStartOf="@+id/libraryNavbarBtn"
+                android:background="@android:color/transparent"
+                android:paddingBottom="10dp" />
+
+            <ImageButton
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:id="@+id/radioNavbarBtn"
+                android:src="@drawable/ic_whatshot"
+                android:contentDescription="Radio"
+                android:layout_alignParentTop="true"
+                android:layout_toStartOf="@+id/lovedNavbarBtn"
+                android:background="@android:color/transparent"
+                android:paddingBottom="10dp" />
+
+            <ImageButton
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:id="@+id/sharingNavbarBtn"
+                android:src="@drawable/ic_sharing"
+                android:contentDescription="@string/buddies"
+                android:background="@android:color/transparent"
+                android:layout_alignParentTop="true"
+                android:layout_alignBottom="@+id/radioNavbarBtn"
+                android:layout_toStartOf="@+id/radioNavbarBtn"
+                android:paddingBottom="10dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Sharing"
+                android:id="@+id/textView"
+                android:layout_alignParentBottom="true"
+                android:layout_alignEnd="@+id/sharingNavbarBtn"
+                android:layout_alignStart="@+id/sharingNavbarBtn"
+                android:textAlignment="center" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Sampler"
+                android:id="@+id/textView2"
+                android:textAlignment="center"
+                android:layout_alignParentBottom="true"
+                android:layout_alignStart="@+id/radioNavbarBtn"
+                android:layout_toStartOf="@+id/lovedNavbarBtn" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Loved"
+                android:id="@+id/textView3"
+                android:textAlignment="center"
+                android:layout_alignEnd="@+id/lovedNavbarBtn"
+                android:layout_alignParentBottom="true"
+                android:layout_toEndOf="@+id/radioNavbarBtn" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Library"
+                android:id="@+id/textView4"
+                android:textAlignment="center"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignStart="@+id/libraryNavbarBtn" />
+
+        </RelativeLayout>
     </RelativeLayout>
 
     <ListView
@@ -31,44 +118,53 @@
         android:id="@+id/recentPlayables"
         android:choiceMode="singleChoice"
         android:clickable="true"
-        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="false" />
+        android:layout_alignParentEnd="false"
+        android:layout_below="@+id/topBar" />
 
     <RelativeLayout
-
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:id="@+id/playingBar">
 
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Small Text"
+            android:text=""
             android:id="@+id/playingSubtitle"
             android:layout_below="@+id/playingName"
-            android:layout_alignParentStart="true" />
+            android:layout_toEndOf="@+id/playingMaximize" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Large Text"
+            android:text="@string/no_song_playing"
             android:id="@+id/playingName"
             android:layout_alignTop="@+id/playPause"
-            android:layout_alignParentStart="true" />
+            android:layout_toEndOf="@+id/playingMaximize" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Play"
+        <ImageButton
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:text="@string/play"
             android:id="@+id/playPause"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/ic_play"
+            android:background="@android:color/transparent"
+            android:contentDescription="@string/play_pause_button" />
+
+        <ImageButton
+            android:layout_width="40dp"
+            android:layout_height="60dp"
+            android:id="@+id/playingMaximize"
+            android:src="@drawable/ic_expand_less"
+            android:background="@android:color/transparent"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true" />
     </RelativeLayout>
-
-
 </RelativeLayout>
