--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,8 @@
         android:layout_height="60dp"
         android:id="@+id/topBar"
         android:layout_alignParentTop="true"
-        android:gravity="center_vertical|center_horizontal">
+        android:gravity="center_vertical|center_horizontal"
+        android:layout_marginBottom="10dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -132,9 +133,13 @@
     <RelativeLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:id="@+id/playingBar">
+        android:layout_height="60dp"
+        android:id="@+id/playingBar"
+        android:background="@android:color/black"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -166,7 +171,7 @@
             android:contentDescription="@string/play_pause_button" />
 
         <ImageButton
-            android:layout_width="40dp"
+            android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/playingMaximize"
             android:src="@drawable/ic_expand_less"
