--- a/app/src/main/res/layout/playing.xml
+++ b/app/src/main/res/layout/playing.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:weightSum="1">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -36,7 +37,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="438dp">
+        android:layout_height="340dp"
+        android:layout_weight="0.97">
 
         <TextView
             android:layout_width="wrap_content"
@@ -70,8 +72,9 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true">
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="20dp">
 
         <ImageButton
             android:layout_width="80dp"
@@ -81,7 +84,9 @@
             android:layout_centerHorizontal="true"
             android:background="@android:color/transparent"
             android:src="@drawable/ic_play_circle"
-            android:scaleType="fitCenter" />
+            android:scaleType="fitCenter"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp" />
 
         <ImageButton
             android:layout_width="40dp"
