--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_height="60dp"
         android:id="@+id/topBar"
         android:layout_alignParentTop="true"
-        android:gravity="center_vertical|center_horizontal"
+        android:layout_centerHorizontal="true"
         android:layout_marginBottom="10dp">
 
         <RelativeLayout
@@ -23,12 +23,12 @@
             android:textAlignment="center">
 
             <ImageButton
-                android:layout_width="95dp"
+                android:layout_width="80dp"
                 android:layout_height="60dp"
                 android:id="@+id/libraryNavbarBtn"
                 android:src="@drawable/ic_library_music"
                 android:contentDescription="@string/music_library"
-                android:layout_alignParentTop="false"
+                android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
                 android:background="@android:color/transparent"
                 android:paddingBottom="10dp"
@@ -38,7 +38,7 @@
                 android:layout_alignParentStart="false" />
 
             <ImageButton
-                android:layout_width="95dp"
+                android:layout_width="80dp"
                 android:layout_height="60dp"
                 android:id="@+id/lovedNavbarBtn"
                 android:src="@drawable/ic_loved"
@@ -51,7 +51,7 @@
                 android:layout_alignParentRight="false" />
 
             <ImageButton
-                android:layout_width="95dp"
+                android:layout_width="80dp"
                 android:layout_height="60dp"
                 android:id="@+id/radioNavbarBtn"
                 android:src="@drawable/ic_whatshot"
@@ -59,10 +59,11 @@
                 android:layout_alignParentTop="true"
                 android:layout_toStartOf="@+id/lovedNavbarBtn"
                 android:background="@android:color/transparent"
-                android:paddingBottom="10dp" />
+                android:paddingBottom="10dp"
+                android:adjustViewBounds="false" />
 
             <ImageButton
-                android:layout_width="95dp"
+                android:layout_width="80dp"
                 android:layout_height="60dp"
                 android:id="@+id/sharingNavbarBtn"
                 android:src="@drawable/ic_sharing"
