--- a/app/src/main/res/layout/playing.xml
+++ b/app/src/main/res/layout/playing.xml
@@ -46,9 +46,9 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Song"
             android:id="@+id/playingSongName"
+            android:layout_marginTop="118dp"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="117dp" />
+            android:layout_centerHorizontal="true" />
 
         <TextView
             android:layout_width="wrap_content"
