--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,178 +6,31 @@
     android:layout_height="match_parent"
     tools:context="com.adalbertosoares.buddybox.MainActivity">
 
-    <RelativeLayout
+    <include layout="@layout/navbar"
+        android:id="@+id/includeNavbar" />
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:id="@+id/topBar"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
-            android:textAlignment="center">
-
-            <ImageButton
-                android:layout_width="80dp"
-                android:layout_height="60dp"
-                android:id="@+id/libraryNavbarBtn"
-                android:src="@drawable/ic_library_music"
-                android:contentDescription="@string/music_library"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:background="@android:color/transparent"
-                android:paddingBottom="10dp"
-                android:layout_alignWithParentIfMissing="false"
-                android:layout_alignParentLeft="false"
-                android:layout_alignParentRight="false"
-                android:layout_alignParentStart="false" />
-
-            <ImageButton
-                android:layout_width="80dp"
-                android:layout_height="60dp"
-                android:id="@+id/lovedNavbarBtn"
-                android:src="@drawable/ic_loved"
-                android:contentDescription="@string/loved"
-                android:layout_alignParentTop="true"
-                android:layout_toStartOf="@+id/libraryNavbarBtn"
-                android:background="@android:color/transparent"
-                android:paddingBottom="10dp"
-                android:layout_alignParentLeft="false"
-                android:layout_alignParentRight="false" />
-
-            <ImageButton
-                android:layout_width="80dp"
-                android:layout_height="60dp"
-                android:id="@+id/radioNavbarBtn"
-                android:src="@drawable/ic_whatshot"
-                android:contentDescription="Radio"
-                android:layout_alignParentTop="true"
-                android:layout_toStartOf="@+id/lovedNavbarBtn"
-                android:background="@android:color/transparent"
-                android:paddingBottom="10dp"
-                android:adjustViewBounds="false" />
-
-            <ImageButton
-                android:layout_width="80dp"
-                android:layout_height="60dp"
-                android:id="@+id/sharingNavbarBtn"
-                android:src="@drawable/ic_sharing"
-                android:contentDescription="@string/buddies"
-                android:background="@android:color/transparent"
-                android:layout_alignParentTop="true"
-                android:layout_alignBottom="@+id/radioNavbarBtn"
-                android:layout_toStartOf="@+id/radioNavbarBtn"
-                android:paddingBottom="10dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Sharing"
-                android:id="@+id/textView"
-                android:layout_alignParentBottom="true"
-                android:layout_alignEnd="@+id/sharingNavbarBtn"
-                android:layout_alignStart="@+id/sharingNavbarBtn"
-                android:textAlignment="center" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Sampler"
-                android:id="@+id/textView2"
-                android:textAlignment="center"
-                android:layout_alignParentBottom="true"
-                android:layout_alignStart="@+id/radioNavbarBtn"
-                android:layout_toStartOf="@+id/lovedNavbarBtn" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Loved"
-                android:id="@+id/textView3"
-                android:textAlignment="center"
-                android:layout_alignEnd="@+id/lovedNavbarBtn"
-                android:layout_alignParentBottom="true"
-                android:layout_toEndOf="@+id/radioNavbarBtn" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Library"
-                android:id="@+id/textView4"
-                android:textAlignment="center"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignStart="@+id/libraryNavbarBtn" />
-
-        </RelativeLayout>
-    </RelativeLayout>
-
-    <ListView
-        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:id="@+id/recentPlayables"
-        android:choiceMode="singleChoice"
-        android:clickable="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="false"
-        android:layout_below="@+id/topBar" />
+        android:layout_below="@+id/includeNavbar"
+        android:id="@+id/frameLibrary">
 
-    <RelativeLayout
-        android:orientation="vertical"
+        <include layout="@layout/library" />
+
+    </FrameLayout>
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:id="@+id/playingBar"
-        android:background="@android:color/black"
-        android:layout_alignParentBottom="true"
+        android:layout_height="match_parent"
         android:layout_alignParentStart="true"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp">
+        android:layout_below="@+id/includeNavbar"
+        android:id="@+id/frameSampler">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text=""
-            android:id="@+id/playingSubtitle"
-            android:layout_below="@+id/playingName"
-            android:layout_toEndOf="@+id/playingMaximize" />
+        <include layout="@layout/sampler" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/no_song_playing"
-            android:id="@+id/playingName"
-            android:layout_alignTop="@+id/playPause"
-            android:layout_toEndOf="@+id/playingMaximize" />
+    </FrameLayout>
 
-        <ImageButton
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:text="@string/play"
-            android:id="@+id/playPause"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:src="@drawable/ic_play"
-            android:background="@android:color/transparent"
-            android:contentDescription="@string/play_pause_button" />
+    <include layout="@layout/playing_bar" />
 
-        <ImageButton
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:id="@+id/playingMaximize"
-            android:src="@drawable/ic_expand_less"
-            android:background="@android:color/transparent"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true" />
-    </RelativeLayout>
 </RelativeLayout>
