--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.adalbertosoares.buddybox.MainActivity">
+    tools:context="buddybox.ui.MainActivity">
 
     <include layout="@layout/navbar"
         android:id="@+id/includeNavbar" />
