Fixes Playlist.songAfter when songIndex > than songs size Fixes updateState when current playlist is empty Creates SongAdded event WIK Switches music folder to device directory music folder

--- a/app/src/main/res/layout/library.xml
+++ b/app/src/main/res/layout/library.xml
@@ -5,6 +5,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:weightSum="1">
 
+    <include layout="@layout/library_empty" />
+
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
