--- a/app/src/main/res/layout/playing_bar.xml
+++ b/app/src/main/res/layout/playing_bar.xml
@@ -12,23 +12,42 @@
     android:paddingBottom="5dp"
     tools:showIn="@layout/activity_main">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text=""
-        android:id="@+id/playingSubtitle"
-        android:layout_below="@+id/playingName"
-        android:layout_toEndOf="@+id/playingMaximize" />
+    <ImageButton
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:id="@+id/playingMaximize"
+        android:src="@drawable/ic_expand_less"
+        android:background="@android:color/transparent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
 
-    <TextView
+    <RelativeLayout
+        android:orientation="vertical"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/no_song_playing"
-        android:id="@+id/playingName"
-        android:layout_alignTop="@+id/playPause"
-        android:layout_toEndOf="@+id/playingMaximize" />
+        android:layout_height="match_parent"
+        android:layout_toEndOf="@+id/playingMaximize"
+        android:layout_toStartOf="@+id/playPause">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="28dp"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/no_song_playing"
+            android:id="@+id/playingName"
+            android:layout_alignParentTop="true" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Subtitle"
+            android:id="@+id/playingSubtitle"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/playingName" />
+
+    </RelativeLayout>
 
     <ImageButton
         android:layout_width="60dp"
@@ -41,12 +60,4 @@
         android:background="@android:color/transparent"
         android:contentDescription="@string/play_pause_button" />
 
-    <ImageButton
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:id="@+id/playingMaximize"
-        android:src="@drawable/ic_expand_less"
-        android:background="@android:color/transparent"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
 </RelativeLayout>
