--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         android:layout_below="@+id/includeNavbar"
         android:id="@+id/frameSampler">
 
-        <include layout="@layout/sampler" />
+        <include layout="@layout/sampler_frame" />
     </FrameLayout>
 
     <FrameLayout
