--- a/app/src/main/res/layout/sampler.xml
+++ b/app/src/main/res/layout/sampler.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:orientation="vertical"
-    android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:weightSum="1">
+    android:id="@+id/sampler">
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="80dp"
-        android:paddingBottom="80dp"
+        android:layout_marginTop="0dp"
+        android:id="@+id/samplerSong"
+        android:gravity="center_vertical"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="0dp"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="0dp"
-        android:id="@+id/linearLayout"
-        android:layout_above="@+id/relativeLayout">
+        android:layout_above="@+id/relativeLayout"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -24,7 +24,8 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Playing received sample:"
             android:id="@+id/textView5"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="10dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -32,7 +33,9 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Song Name"
             android:id="@+id/samplingName"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="10dp"
+            android:textAlignment="center" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -47,24 +50,21 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
         android:paddingLeft="40dp"
         android:paddingRight="40dp"
+        android:paddingBottom="40dp"
+        android:id="@+id/relativeLayout"
+        android:gravity="center_vertical"
         android:layout_marginLeft="0dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="false"
-        android:paddingBottom="40dp"
-        android:id="@+id/relativeLayout">
+        android:layout_alignParentStart="true">
 
         <ImageButton
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:id="@+id/hateIt"
-            android:src="@drawable/ic_thumb_down"
+            android:src="@drawable/ic_cancel_red"
             android:background="#FFFFFF"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="0dp"
             android:layout_alignParentTop="true"
             android:layout_marginTop="0dp" />
 
@@ -72,15 +72,14 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:id="@+id/loveIt"
-            android:src="@drawable/ic_thumb_up"
+            android:src="@drawable/ic_loved_green"
             android:background="#FFFFFF"
-            android:layout_marginLeft="160dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true" />
 
         <ImageButton
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:id="@+id/imageButton"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
@@ -88,5 +87,4 @@
             android:src="@drawable/ic_delete" />
 
     </RelativeLayout>
-
 </RelativeLayout>
