Converts song genre numeric codes Fixes playing layout texts

--- a/app/src/main/res/layout/playing.xml
+++ b/app/src/main/res/layout/playing.xml
@@ -40,37 +40,34 @@
         android:layout_height="340dp"
         android:layout_weight="0.97"
         android:paddingLeft="20dp"
-        android:paddingRight="20dp">
+        android:paddingRight="20dp"
+        android:gravity="center_vertical|center_horizontal">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Song"
             android:id="@+id/playingSongName"
-            android:layout_marginTop="118dp"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
             android:textAlignment="center" />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Artist"
             android:id="@+id/playingSongArtist"
             android:layout_below="@+id/playingSongName"
-            android:layout_centerHorizontal="true"
             android:textAlignment="center" />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="Genre"
             android:id="@+id/playingSongGenre"
             android:layout_below="@+id/playingSongArtist"
-            android:layout_centerHorizontal="true"
             android:textAlignment="center" />
 
     </RelativeLayout>
