--- a/app/src/main/res/layout/loved_empty.xml
+++ b/app/src/main/res/layout/loved_empty.xml
@@ -3,30 +3,33 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_vertical"
-    android:id="@+id/samplerEmpty">
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp"
+    android:id="@+id/lovedEmpty">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="No songs found..."
-        android:id="@+id/textView6"
+        android:text="You don&apos;t have loved songs yet"
+        android:id="@+id/textView10"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="10dp" />
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Invite friends to receive new songs"
-        android:id="@+id/textView4"
-        android:textAlignment="center"
-        android:layout_marginBottom="10dp" />
+        android:text="Check out What&apos;s Hot to discover new songs you&apos;ll love"
+        android:id="@+id/textView11"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="10dp"
+        android:textAlignment="center" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Invite Friend"
-        android:id="@+id/button2"
+        android:text="What&apos;s Hot"
+        android:id="@+id/whatshot"
         android:layout_gravity="center_horizontal" />
 </LinearLayout>
