--- a/app/src/main/res/layout/library_empty.xml
+++ b/app/src/main/res/layout/library_empty.xml
@@ -2,22 +2,49 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/library_empty">
+    android:id="@+id/library_empty"
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp"
+    android:gravity="center_vertical">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="There are no songs in your library"
         android:id="@+id/textView3"
+        android:layout_gravity="center_horizontal"
+        android:paddingBottom="8dp"
+        android:textAlignment="center" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Get songs from your friends"
+        android:id="@+id/textView2"
+        android:paddingBottom="8dp"
+        android:textAlignment="center" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="OR"
+        android:id="@+id/textView12"
+        android:paddingBottom="8dp"
+        android:textAlignment="center"
         android:layout_gravity="center_horizontal" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Get songs from your friends OR add songs to this device"
-        android:id="@+id/textView2" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Add songs to this device"
+        android:id="@+id/textView13"
+        android:paddingBottom="8dp"
+        android:textAlignment="center"
+        android:layout_gravity="center_horizontal" />
 
     <Button
         android:layout_width="wrap_content"
