Inserts pager viewer in library frame (recent/playlists) - WIP Create music directory if does not exists

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,7 +45,7 @@
         android:layout_below="@+id/includeNavbar"
         android:id="@+id/frameSharing">
 
-        <include layout="@layout/sharing" />
+        <include layout="@layout/sharing_frame" />
     </FrameLayout>
 
     <include layout="@layout/playing_bar" />
