--- a/app/src/main/res/layout/library_pager.xml
+++ b/app/src/main/res/layout/library_pager.xml
@@ -23,5 +23,6 @@
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingTop="8dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"  />
 </android.support.design.widget.CoordinatorLayout>
