Enlarges area for maximize/minimize playing song

--- a/app/src/main/res/layout/playing_bar.xml
+++ b/app/src/main/res/layout/playing_bar.xml
@@ -12,21 +12,21 @@
     android:paddingBottom="5dp"
     tools:showIn="@layout/activity_main">
 
-    <ImageButton
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:id="@+id/playingMaximize"
-        android:src="@drawable/ic_expand_less"
-        android:background="@android:color/transparent"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
-
     <RelativeLayout
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_toEndOf="@+id/playingMaximize"
-        android:layout_toStartOf="@+id/playPause">
+        android:layout_toStartOf="@+id/playPause"
+        android:id="@+id/playingMaximize">
+
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/ic_expand_less"
+            android:background="@android:color/transparent"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:id="@+id/imageView" />
 
         <TextView
             android:layout_width="match_parent"
@@ -34,7 +34,8 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/no_song_playing"
             android:id="@+id/playingName"
-            android:layout_alignParentTop="true" />
+            android:layout_alignParentTop="true"
+            android:layout_toEndOf="@+id/imageView" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -44,8 +45,8 @@
             android:id="@+id/playingSubtitle"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/playingName" />
+            android:layout_below="@+id/playingName"
+            android:layout_toEndOf="@+id/imageView" />
 
     </RelativeLayout>
 
