--- a/app/src/main/res/layout/library_frame.xml
+++ b/app/src/main/res/layout/library_frame.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:background="#000000">
 
     <include layout="@layout/library_pager" />
 
