--- a/app/src/main/res/layout/playing.xml
+++ b/app/src/main/res/layout/playing.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:background="#000000">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -12,12 +13,12 @@
             android:layout_width="match_parent"
             android:layout_height="566dp"
             android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true">
+            android:layout_alignParentStart="true"
+            android:id="@+id/playingMinimize">
 
-            <ImageButton
-                android:layout_width="40dp"
+            <ImageView
+                android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:id="@+id/playingMinimize"
                 android:background="@android:color/transparent"
                 android:src="@drawable/ic_expand_more"
                 android:layout_alignParentTop="true"
